--- a/Aula3/index.ipynb
+++ b/Aula3/index.ipynb
@@ -546,14 +546,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# escolhendo quais colunas vamos usar para treinar o modelo\n",
     "# y é a coluna que queremos que o modelo calcule\n",
     "# x vai todas as colunas que vamos usar para prever o score de credito, não vamos usar a coluna id_cliente porque ela é um numero qualquer que nao ajuda a previsao\n",
-    "x = tabela.drop([\"score_credito\", \"id_cliente\"], axis=1)\n",
+    "x = tabela.drop([\"scor_credit\", \"id_cliente\"], axis=1)\n",
     "y = tabela[\"score_credito\"]\n",
     "\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -608,7 +608,7 @@
    ],
    "source": [
     "# se o nosso modelo chutasse tudo \"Standard\", qual seria a acurácia do modelo?\n",
-    "contagem_scores = tabela[\"score_credito\"].value_counts()\n",
+    "contagem_scores = tabela[\"scor_credit\"].value_counts()\n",
     "print(contagem_scores['Standard'] / sum(contagem_scores))"
    ]
   },
